--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "aos": "^3.0.0-beta.6"
+    "aos": "^3.0.0-beta.6",
+    "imask": "^6.0.7"
   }
 }
