--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
-    "imask": "^6.0.7"
+    "imask": "^6.0.7",
+    "lozad": "^1.16.0"
   }
 }
